<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.mem4j</groupId>
    <artifactId>mem4j-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Mem4j Parent</name>
    <description>Parent POM for Mem4j - Long-term memory for AI Agents</description>
    <url>https://github.com/mem4j/mem4j</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/langMem/mem4j.git</connection>
        <developerConnection>scm:git:https://github.com/langMem/mem4j.git</developerConnection>
        <url>https://github.com/langMem/mem4j</url>
    </scm>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/langMem/mem4j/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Github Actions</system>
        <url>https://github.com/langMem/mem4j/actions</url>
    </ciManagement>

    <developers>
        <developer>
            <name>Aias00</name>
            <email>liuhongyu@apache.org</email>
            <url>https://github.com/Aias00</url>
        </developer>
        <developer>
            <name>Shown</name>
            <email>shown@apache.org</email>
            <url>https://github.com/yuluo-yx</url>
        </developer>
    </developers>

    <modules>
        <module>mem4j-bom</module>
        <module>mem4j-core</module>
        <module>mem4j-example</module>
        <module>mem4j-autoconfigure</module>
        <module>mem4j-spring-boot-starter</module>
    </modules>

    <properties>
        <!-- Project version -->
        <revision>0.1.0.RC1</revision>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring-ai-alibaba.version>1.0.0.2</spring-ai-alibaba.version>
        <spring.boot.version>3.2.0</spring.boot.version>
        <spring.version>6.1.1</spring.version>

        <jackson.version>2.15.3</jackson.version>
        <openai.version>0.12.0</openai.version>
        <h2.version>2.3.232</h2.version>

        <!-- Vector Store versions -->
        <qdrant.version>1.13.0</qdrant.version>
        <elasticsearch.version>8.11.0</elasticsearch.version>
        <weaviate.version>5.4.0</weaviate.version>
        <neo4j.version>5.28.9</neo4j.version>
        <milvus.version>2.3.4</milvus.version>

        <!-- Test versions -->
        <junit.version>5.10.0</junit.version>
        <mockito.version>5.7.0</mockito.version>
        <slf4j.version>2.0.9</slf4j.version>
        <logback.version>1.4.11</logback.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring AI Alibaba BOM -->
            <dependency>
                <groupId>com.alibaba.cloud.ai</groupId>
                <artifactId>spring-ai-alibaba-bom</artifactId>
                <version>${spring-ai-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Mem4j modules -->
            <dependency>
                <groupId>io.github.mem4j</groupId>
                <artifactId>mem4j-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>io.github.mem4j</groupId>
                <artifactId>mem4j-autoconfigure</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!-- Maven Flatten Plugin for ${revision} support -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>17</source>
                        <target>17</target>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.0</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.6.3</version>
                </plugin>

                <plugin>
                    <groupId>io.spring.javaformat</groupId>
                    <artifactId>spring-javaformat-maven-plugin</artifactId>
                    <version>0.0.39</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <inherited>true</inherited>
                            <goals>
                                <goal>validate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
